update javadoc in Level and LevelImpl